@@ -1,3 +1,7 @@
+[B]Version 1.2.2[/B]
+
+- Detects when a video has been deleted
+
 [B]Version 1.2.1[/B]
 
 - Detects when a HD stream is unavailable
